[Qt] REGRESSION (r130851): fast/text/word-space-with-kerning.html fails https://bugs.webkit.org/show_bug.cgi?id=98876

Reviewed by Simon Hausmann.

Source/WebCore:

Do not add word-spacing for leading space. This matches what simple path font-width does.

Tested by existing tests.

* platform/graphics/qt/FontQt.cpp:
(WebCore::Font::floatWidthForComplexText):

LayoutTests:

Unskip passing word-width tests.

* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/118125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132205 268f45cc-cd09-0410-ab3c-d52691b4dbfc